--- a/src/main/webapp/vistas/solicitudesInternet/Edit.xhtml
+++ b/src/main/webapp/vistas/solicitudesInternet/Edit.xhtml
@@ -23,36 +23,22 @@
                                         <f:facet name="header">
                                             <p:outputLabel value="Datos Generales"/>
                                         </f:facet>                                        
-                                   <p:outputLabel value="#{bundle.CreateSolicitudesInternetLabel_solicitud}" for="solicitud" />
-                                            <p:inputText id="solicitud" value="#{solicitudesInternetController.selected.solicitud}" title="#{bundle.CreateSolicitudesInternetTitle_solicitud}" readonly="true" required="true" requiredMessage="#{bundle.CreateSolicitudesInternetRequiredMessage_solicitud}"/>
+                                            <p:outputLabel value="#{bundle.CreateSolicitudesInternetLabel_solicitud}" for="solicitud" />
+                                            <p:inputText id="solicitud" value="#{solicitudesInternetController.selected.solicitud}" title="#{bundle.CreateSolicitudesInternetTitle_solicitud}" readonly="true"/>
                                             <p:outputLabel value="#{bundle.CreateSolicitudesInternetLabel_gestor}" for="gestor" />
-                                            <p:selectOneMenu id="gestor" filter="true" value="#{solicitudesInternetController.selectGestores}" required="true" requiredMessage="Es necesarion un gestor" >
-                                            <f:selectItems  value="#{gestoresController.getItemsActivos()}"
-                                                                var="gestorItem"
-                                                                itemValue="#{gestorItem}"/>
-                                            <p:ajax  listener="#{solicitudesInternetController.nombreOrganismo()}" update="nombre dependencia organismo"/>
-                                            </p:selectOneMenu>                                            
+                                            <p:inputText id="gestor" value="#{solicitudesInternetController.selected.gestor}" readonly="true"/>
                                             <p:outputLabel value="#{bundle.CreateSolicitudesInternetLabel_nombre}" for="nombre" />
-                                            <h:outputText id="nombre" value="#{solicitudesInternetController.selected.nombre}"  title="#{bundle.CreateSolicitudesInternetTitle_nombre}" />
+                                            <p:inputText id="nombre" value="#{solicitudesInternetController.selected.nombre}" readonly="true"/>
                                             <p:outputLabel value="#{bundle.CreateSolicitudesInternetLabel_dependencia}" for="dependencia" />
-                                            <h:outputText id="dependencia" value="#{solicitudesInternetController.selected.dependencia}"  title="#{bundle.CreateSolicitudesInternetTitle_dependencia}" />
+                                            <p:inputText id="dependencia" value="#{solicitudesInternetController.selected.dependencia}" readonly="true" title="#{bundle.CreateSolicitudesInternetTitle_dependencia}" />
                                             <p:outputLabel value="#{bundle.CreateSolicitudesInternetLabel_organismo}" for="organismo" />
-                                            <h:outputText id="organismo" value="#{solicitudesInternetController.selected.organismo}" title="#{bundle.CreateSolicitudesInternetTitle_organismo}" />
+                                            <p:inputText id="organismo" value="#{solicitudesInternetController.selected.organismo}" readonly="true" title="#{bundle.CreateSolicitudesInternetTitle_organismo}" />
                                             
                                             <p:outputLabel value="#{bundle.CreateSolicitudesInternetLabel_tema}" for="tema" />
-                                            <p:selectOneMenu id="tema" filter="true" value="#{solicitudesInternetController.selected.tema}" required="true" requiredMessage="Elige un tema" >
-                                                <f:selectItems  value="#{solicitudesInternetController.temas}"
-                                                                var="temas"
-                                                                itemValue="#{temas}"/>
-                                            </p:selectOneMenu>
-                                            <h:outputText value="" />
-                                            <p:commandLink value="Nuevo Tema" oncomplete="PF('newTemaFormDialog').show()" />
+                                            <p:inputText id="tema" value="#{solicitudesInternetController.selected.tema}" readonly="true"/>
+
                                             <p:outputLabel value="#{bundle.CreateSolicitudesInternetLabel_nubosidad}" for="nubosidad" />
-                                            <p:selectOneMenu id="nubosidad" filter="true"  value="#{solicitudesInternetController.selected.nubosidad}" required="true" requiredMessage="Elige la nubosidad" >
-                                                <f:selectItems  value="#{solicitudesInternetController.nubosidad}"
-                                                                var="selectNubosidad"
-                                                                itemValue="#{selectNubosidad}"/>
-                                            </p:selectOneMenu>                                             
+                                            <p:inputText id="nubosidad" value="#{solicitudesInternetController.selected.nubosidad}" readonly="true"/>
                                             <p:outputLabel value="#{bundle.CreateSolicitudesInternetLabel_status}" for="status" />
                                             <p:inputText id="status" value="#{solicitudesInternetController.selected.status}"   readonly="true" title="#{bundle.CreateSolicitudesInternetTitle_status}" required="true" requiredMessage="#{bundle.CreateSolicitudesInternetRequiredMessage_status}"/>
                                             <p:outputLabel value="#{bundle.CreateSolicitudesInternetLabel_fechaCaptura}" for="fechaCaptura" />
@@ -139,46 +125,42 @@
                                         <p:contextMenu for="ctlgImg">
                                             <p:menuitem icon="ui-icon-plus" value="#{bundle.Create}"    actionListener="#{catalogoimagenesController.prepareCreate()}" update=":CatalogoimagenesCreateForm" oncomplete="PF('CatalogoimagenesCreateDialog').show()" />
                                         </p:contextMenu>
-                                        <p:dataTable id="ctlgImg" value="#{catalogoimagenesController.items}" 
+                                        <p:dataTable id="ctlgImg" value="#{solicitudesInternetController.imgSolitud}" 
                                                  var="item"
                                                  paginator="true"
                                                  rowsPerPageLabel="10,20,30"
                                                  rows="10"
-                                                 rowKey="#{item.identificador}"
-                                                 selection="#{catalogoimagenesController.imgSelect}" 
+                                                 rowKey="#{item.identificador.identificador}"
                                                  >
-                                            <p:ajax event="rowSelectCheckbox" listener="#{solicitudesInternetController.ModoNivel(catalogoimagenesController.imgSelect)}" update="SolicitudesInternetCreateForm:idCreateButton"/>
-                                            <p:ajax event="rowUnselectCheckbox" listener="#{solicitudesInternetController.ModoNivel(catalogoimagenesController.imgSelect)}" update="SolicitudesInternetCreateForm:idCreateButton"/>
-                                            <p:column selectionMode="multiple" styleClass="selectionCheckBox" />
                                             <p:column>
                                                 <f:facet name="header">
                                                     <h:outputText value="Id"/>
                                                 </f:facet>
-                                               <h:outputText value="#{item.identificador}"/>
+                                                <h:outputText value="#{item.identificador.identificador}"/>
                                             </p:column>
-                                            <p:column filterBy="#{item.satelite}">
+                                            <p:column filterBy="#{item.identificador.satelite}">
                                                 <f:facet name="header">
                                                     <h:outputText value="Satélite"/>
                                                 </f:facet>
-                                                <h:outputText value="#{item.satelite}"/>
+                                                <h:outputText value="#{item.identificador.satelite}"/>
                                             </p:column>
-                                            <p:column  filterBy="#{item.tipo}">
+                                            <p:column  filterBy="#{item.identificador.tipo}">
                                                 <f:facet name="header">
                                                     <h:outputText value="Modo"/>
                                                 </f:facet>
-                                                <h:outputText value="#{item.tipo}"/>
+                                                <h:outputText value="#{item.identificador.tipo}"/>
                                             </p:column>
-                                            <p:column  filterBy="#{item.nivel}">
+                                            <p:column  filterBy="#{item.identificador.nivel}">
                                                 <f:facet name="header">
                                                     <h:outputText value="Nivel"/>
                                                 </f:facet>
-                                                <h:outputText value="#{item.nivel}"/>
+                                                <h:outputText value="#{item.identificador.satelite}"/>
                                             </p:column>
-                                            <p:column  filterBy="#{item.resolucion}">
+                                            <p:column  filterBy="#{item.identificador.resolucion}">
                                                 <f:facet name="header">
                                                     <h:outputText value="Resolución"/>
                                                 </f:facet>
-                                                <h:outputText value="#{item.nivel}"/>
+                                                <h:outputText value="#{item.identificador.resolucion}"/>
                                             </p:column>
                                         </p:dataTable>
                                     </h:form>                                  
