--- a/src/main/webapp/vistas/personas/Crear.xhtml
+++ b/src/main/webapp/vistas/personas/Crear.xhtml
@@ -7,13 +7,14 @@
       xmlns:p="http://primefaces.org/ui">
 
     <ui:composition>
-        <p:dialog id="PersonasCreateDlg" widgetVar="PersonasCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreatePersonasTitle}" position="top" height="100%" width="100%" closable="false" >
+        <p:dialog id="PersonasCreateDlg" widgetVar="PersonasCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreatePersonasTitle}" position="top" width="1350"  responsive="true"  closable="false" >
             <h:form id="PersonasCreateForm">
                 <p:wizard id="wizardCrearPersonas" widgetVar="wizCrearPersonas" nextLabel="#{bundle.BotonSiguiente}" backLabel="#{bundle.BotonAtras}">                    
                     <p:tab id="tabInstitucion" title="#{bundle.InstitucionTitle}">                            
                         <p:panel header="#{bundle.DetallesPanel}">
+                            <div class="ui-fluid">
                             <p:messages closable="true"/>
-                            <p:panelGrid columns="2"  columnClasses="label, value"   >                                 
+                            <p:panelGrid columns="2" layout="grid">                                 
                                 <p:outputLabel value="#{bundle.DependenciaLabel}" for="iddependencia" />
                                 <h:outputText id="iddependencia" value="#{personasController.selected.idinstitucion.idorganismo.iddependencia.siglas}" title="#{bundle.PersonasTitle_dependencia}"/>                                             
                                 
@@ -23,12 +24,14 @@
                                 <p:outputLabel value="#{bundle.InstitucionLabel}" for="idinstitucion" />                                                           
                                 <h:outputText id="idinstitucion" value="#{personasController.selected.idinstitucion.nombre}" title="#{bundle.PersonasTitle_institucion}" />                               
                             </p:panelGrid>
+                            </div>
                         </p:panel>
                     </p:tab> 
                     <p:tab id="tabPersona" title="#{bundle.PersonasTitle}">
                         <p:panel header="#{bundle.DetallesPanel}">
+                            <div class="ui-fluid">
                             <p:messages closable="true"/>
-                            <p:panelGrid columns="4" layout="grid" >
+                            <p:panelGrid columns="4" layout="grid" columnClasses="ui-grid-col-4,ui-grid-col-10,ui-grid-col-4,ui-grid-col-10">
 
                                     <p:outputLabel value="#{bundle.PersonasLabel_tipo}" for="tipo" />
                                     <p:selectOneMenu id="tipo" value="#{personasController.selected.tipo}">                     
@@ -62,9 +65,11 @@
                                     <p:outputLabel value="#{bundle.PersonasLabel_correo3}" for="correo3" />
                                     <p:inputText id="correo3" value="#{personasController.selected.correo3}" title="#{bundle.PersonasTitle_correo3}" validatorMessage="#{bundle.PersonasValidatorMessage_correo3}" />
                            </p:panelGrid>
+                            </div>
                         </p:panel>
                     </p:tab>
                     <p:tab id="tabImagen" title="#{bundle.ImagenesTitle}">
+                        <div class="ui-fluid">
                         <p:panel header="#{bundle.ImagenesPanel}" >
                             <p:panelGrid columns="5" style="text-align:center" > 
                                 <p:fileUpload label="#{bundle.PersonasTitle_foto}" update="nombrefoto" allowTypes="/(\.|\/)(gif|jpe?g|png)$/"  fileUploadListener="#{personasController.subirFoto}" auto="true" >
@@ -128,6 +133,7 @@
  
                             </p:panelGrid>
                         </p:panel>  
+                        </div>    
                         <p:commandButton value="#{bundle.Save}"  actionListener="#{personasController.create}"  oncomplete="PF('wizCrearPersonas').loadStep('tabInstitucion',true);PF('PersonasCreateDialog').hide();" update=":GestoresCreateForm,:GestoresEditForm"/>                       
                     </p:tab>  
                 </p:wizard> 
